QAudioSource/Sink: use preferred format by default

As pointed out in QTBUG-123104, having a default-initialized
QAudioFormat without having the possibility to set the format doesn't
make much sense.
Using the preferred audio format would result in an unusable instance
of the QAudioSource/QAudioSink.

[ChangeLog] QAudioSource/Sink: use preferred device format when
constructed with a default-initialized QAudioFormat.

Fixes: QTBUG-123104
Change-Id: Ie4c8bc0b03b693952e282643a3d6f3d35cf0f4e8
Reviewed-by: Artem Dyomin <artem.dyomin@qt.io>